#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip 
# and try again
#

TAG: pwi-6-0-22-75
DATE: 09/25/2023
STAFF: lec
wts2-393/Disease to reference annotation
Lit Triage/Disease Associations

TAG: pwi-6-0-22-74
DATE: 09/08/2023
STAFF: lec
wts2-415/fl2-521/No Phenoypic Analysis migration (TR12775)/remove term from backend products

TAG: pwi-6-0-22-73
TAG: pwi-6-0-22-72
DATE: 08/24/2023
STAFF: lec
wts2-1251/fl2-478/Genotype Module - Result Search Summary

TAG: pwi-6-0-22-71
DATE: 08/24/2023
STAFF: jer
wts2-1247/fl2-473 Move PRISM into PWI

TAG: pwi-6-0-22-70
TAG: pwi-6-0-22-69
TAG: pwi-6-0-22-68
TAG: pwi-6-0-22-67
TAG: pwi-6-0-22-66
TAG: pwi-6-0-22-65
DATE: 08/08/2023, 08/18/2023
STAFF: lec
wts2-765/fl2-222/Remove mrk_alias table: backend components
wts2-1249/fl2-475/GXD image module: change "copy" image from deselect to Add button
wts2-1242/fl2-468/Add a link to RGD and UniProt when there is a Rat/Human identifier in the 'inferred from field'
wts2-1250/fl2-477/Genotype Module - Clipboard Summary
wts2-1251/fl2-478/Genotype Module - Result Search Summary

TAG: pwi-6-0-22-64
DATE: 07/20/2023
STAFF: jer
wts2-1234/fl2-446 re-written genotype feature in HT index cannot hand…

TAG: pwi-6-0-22-63
DATE: 07/13/2023
STAFF: lec
wts2-1231/Genotype/Add/fix Notes bug

TAG: pwi-6-0-22-62
DATE: 07/11/2023
STAFF: lec
wts2-1220/fl2-432/Cannot search for strain containing an apostrophe
wts2-1222/fl2-426 Add paginators to bottom of summary pages.
wts2-1213/fl2-425 genotype module: adding new strain wipes out gene id

TAG: pwi-6-0-22-61
DATE: 06/15/2023
STAFF: lec
wts2-1212/fl2-416/Functionality text update for GXD Assay module

TAG: pwi-6-0-22-60
TAG: pwi-6-0-22-59
TAG: pwi-6-0-22-58
TAG: pwi-6-0-22-57
DATE: 06/13/2023
STAFF: lec, jer
wts2-1178/fl2c/gxd assay/tool template
wts2-1206/fl2-403/HT index module: multiple issues
wts2-1197/fl2-406/Increase Specimen Note column width for Imagepane Summary
wts2-1204/fl2-407/Accession ID Search Box is case-specific