@@ -3,6 +3,12 @@
 # and try again
 #
 
+TAG: pwi-6-0-22-76
+DATE: 10/04/2023
+STAFF: lec
+wts2-1293/fl2-570/Add new terms to MCV/TDC
+wts2-1297/fl2-572/P-WI - Better control of Add button in LitTriage Module
+
 TAG: pwi-6-0-22-75
 DATE: 09/25/2023
 STAFF: lec
